# openclonk

./: .travis.yml  CMakeLists.txt
cmake/: FindGMP.cmake  FindMPFR.cmake
planet/System.ocg/: LanguageDE.txt  LanguageUS.txt
src/c4group/: C4Extra.cpp  C4GroupSet.cpp  C4LangStringTable.cpp  C4Language.cpp  CStdFile.cpp
src/config/: C4Config.cpp  C4Reloc.cpp
src/control/: C4Control.cpp  C4Control.h  C4GameParameters.cpp  C4GameSave.cpp  C4PlayerControl.cpp  C4Record.cpp
src/editor/: C4Console.cpp  C4EditCursor.cpp  C4ToolsDlg.cpp
src/game/: C4Application.cpp  C4FullScreen.cpp  C4Game.cpp  C4GameScript.cpp  C4GraphicsSystem.cpp  C4Viewport.cpp  ClonkMain.cpp
src/graphics/: C4Draw.cpp  C4DrawGL.cpp  C4DrawGLCtx.cpp  C4DrawMeshGL.cpp  C4FontLoader.cpp  C4GraphicsResource.cpp  C4Surface.cpp  C4SurfaceLoaders.cpp  StdPNG.cpp
src/gui/: C4ChatDlg.cpp  C4FileSelDlg.cpp  C4Gui.cpp  C4GuiButton.cpp  C4GuiCheckBox.cpp  C4GuiComboBox.cpp  C4GuiDialogs.cpp  C4GuiEdit.cpp  C4GuiLabels.cpp  C4GuiListBox.cpp  C4GuiMenu.cpp  C4GuiTabular.cpp  C4KeyboardInput.cpp  C4KeyboardInput.h  C4MessageBoard.cpp  C4MessageInput.cpp  C4MouseControl.cpp  C4Scoreboard.cpp  C4ScriptGuiWindow.cpp  C4StartupAboutDlg.cpp  C4StartupMainDlg.cpp  C4StartupNetDlg.cpp  C4StartupOptionsDlg.cpp  C4StartupPlrSelDlg.cpp  C4StartupScenSelDlg.cpp  C4UpperBoard.cpp
src/landscape/: C4Landscape.cpp  C4LandscapeRender.cpp  C4Map.cpp  C4MapCreatorS2.cpp  C4MapScript.cpp  C4Material.cpp  C4Scenario.cpp  C4Sky.cpp  C4SolidMask.cpp  C4Texture.cpp  C4TransferZone.cpp
src/landscape/fow/: C4FoWLight.cpp
src/lib/: C4InputValidation.cpp  Standard.cpp  StdBuf.cpp  StdCompiler.cpp  StdCompiler.h  StdMesh.cpp  StdMeshLoaderBinary.cpp  StdMeshLoaderBinaryChunks.cpp  StdMeshLoaderBinaryChunks.h  StdMeshLoaderXml.cpp  StdMeshMaterial.cpp  StdMeshMath.cpp  StdMeshMath.h  StdMeshUpdate.cpp
src/netpuncher/: main.cpp
src/network/: C4Client.cpp  C4NetIO.cpp  C4NetIO.h  C4Network2.cpp  C4Network2Client.cpp  C4Network2Client.h  C4Network2Dialogs.cpp  C4Network2Discover.cpp  C4Network2Discover.h  C4Network2IO.cpp  C4Network2IO.h  C4Network2IRC.cpp  C4Network2Reference.cpp  C4Network2Reference.h  C4Network2Res.cpp  C4Network2Stats.cpp  C4Packet2.cpp
src/object/: C4Command.cpp  C4Def.cpp  C4DefGraphics.cpp  C4DefList.cpp  C4GameObjects.cpp  C4Movement.cpp  C4Object.cpp  C4ObjectCom.cpp  C4ObjectList.cpp  C4ObjectMenu.cpp  C4ObjectPtr.cpp  C4ObjectScript.cpp
src/platform/: C4AppSDL.cpp  C4AppT.cpp  C4CrashHandlerWin32.cpp  C4FileMonitor.cpp  C4GamePadCon.cpp  C4MusicFile.cpp  C4MusicSystem.cpp  C4SoundSystem.cpp  C4WindowSDL.cpp  C4WindowWin32.cpp  StdFile.cpp  StdRegistry.cpp  StdSchedulerPoll.cpp
src/player/: C4Achievement.cpp  C4Player.cpp  C4PlayerList.cpp
src/script/: C4Aul.cpp  C4AulCompiler.cpp  C4AulDebug.cpp  C4AulExec.cpp  C4AulLink.cpp  C4AulParse.cpp  C4Effect.cpp  C4PropList.cpp  C4Script.cpp  C4ScriptHost.cpp  C4ScriptHost.h  C4ScriptStandalone.cpp  C4ScriptStandaloneStubs.cpp  C4Value.cpp  C4Value.h
tests/: CMakeLists.txt
tests/aul/: AulPredefinedFunctionTest.cpp
tests/math/: StdMeshVectorTest.cpp
tools/ci/: appv-AfterBuild.ps1
